# FawltyDeps

./: .gitignore  .mutmut-cache  .pre-commit-hooks.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  crawler.py  index.html  mkdocs.yml  noxfile.py  pyproject.toml  shell.nix
.github/: codeql-config.yml
.github/workflows/: actionlint.yaml  ci.yaml  codeql.yaml  codeql.yml  docs.yaml  format.yaml  lint.yaml  publish.yaml  self_test.yaml  tests.yaml
CONTRIBUTING/: index.html
CodeDesign/: index.html
DesignDoc/: index.html
FAQ/: index.html
PyPI_analysis/: README.md  __main__.py  cli_parser.py  detect_imports.py  download_and_analyze.py  main.py
PyPI_analysis/experiments/biomedical_projects_experiment/: experiment.py  repositories.json
PyPI_analysis/experiments/biomedical_projects_experiment/results/: 2013-khmer-counting.json  2018_ecoli_pathogenicity.json  2018koyeast.json  2019-nCov.json  2019_HCN.json  2019_caicedo_cytometryA.json  2020.Salmonella_biofilm.json  2020_Spindle-Root.json  3-cube-partial-order-count.json  6DOF_processing_tutorial.json  70S-resolution.json  AA-leche-humana.json  ABA_functional_networks.json  ADAP-in-MZmine2.json  AFQ-Browser.json  AHBAprocessing.json  AICrystallographer.json  AIMS.json  AMICI.json  (+1740 more)
PyPI_analysis/experiments/top_1400_pypi_packages/: experiment.py  pypi_repositories.json
PyPI_analysis/notebooks/: analysis_0.13.1.1.ipynb  results-biomedical.ipynb  results.ipynb
PyPI_analysis/results/: nltk.json  opencv-python.json  pandas.json  plotly.json  pygame.json  requests.json  results.ipynb  scikit-learn.json  scipy.json  sqlalchemy.json  statsmodels.json
PyPI_analysis/tests/: pyproject.toml  requirements.txt  setup.cfg  setup.py
PyPI_analysis/tests/main/: docstrings.py  imports.py
configuration/: index.html
docs/: CONTRIBUTING.md  CodeDesign.md  DesignDoc.md  FAQ.md  configuration.md  default_ignore_unused_list.md  explanation.md  how_to_guides.md  index.md  installation.md  reference.md  usage.md
explanation/: index.html
fawltydeps/: __main__.py  check.py  cli.py  cli_parser.py  dir_traversal.py  extract_declared_dependencies.py  extract_dependencies.py  extract_deps.py  extract_deps_environment_yml.py  extract_deps_pixi.py  extract_deps_pyproject.py  extract_deps_setup_cfg.py  extract_deps_setup_py.py  extract_imports.py  gitignore_parser.py  limited_eval.py  main.py  package_types.py  packages.py  settings.py  traverse_project.py  types.py  utils.py
fawltydeps/dependencies/: __init__.py
fawltydeps/extract_deps/: __init__.py  environment_yml_parser.py  pixi_toml_parser.py  pyproject_toml_parser.py  requirements_parser.py  setup_cfg_parser.py  setup_py_parser.py
fawltydeps/parser/: __init__.py
fawltydeps/scripts/: hello.py
how_to_guides/: index.html
installation/: index.html
search/: search_index.json
tests/: conftest.py  extract_declared_dependencies_pyproject_toml.py  project_helpers.py  python_packages.toml  test_analysis.py  test_cmdline.py  test_cmdline_options.py  test_compare_imports_to_dependencies.py  test_configured_run.py  test_deps_parser_determination.py  test_dir_traversal.py  test_extract_declared_dependencies_errors.py  test_extract_declared_dependencies_pixi_toml.py  test_extract_declared_dependencies_pyproject_toml.py  test_extract_declared_dependencies_simple.py  test_extract_declared_dependencies_success.py  test_extract_depencencies_pyproject_toml.py  test_extract_dependencies_errors.py  test_extract_dependencies_simple.py  test_extract_deps_environment_yml.py  test_extract_deps_errors.py  test_extract_deps_pixi.py  test_extract_deps_pyproject.py  test_extract_deps_success.py  test_extract_imports_errors.py  test_extract_imports_simple.py  test_extract_simple_imports.py  test_gitignore_parser.py  test_inline_script_deps.py  test_install_deps.py  test_integration_sample_projects.py  test_invocation.py  test_local_env.py  test_map_dep_name_to_import_names.py  test_packages.py  test_pull_deps.py  test_real_projects.py  test_resolver.py  test_sample.py  test_sample_projects.py  (+4 more)
tests/projects_gallery/file__requirements/: expected.toml
tests/real_projects/: detect-waste.toml  fawltydeps.toml  left-pad.toml  peppy.toml  python-algorithms.toml  requests.toml
tests/sample_projects/base_dir_testbed/: expected.toml
tests/sample_projects/base_path_testbed/: expected.toml
tests/sample_projects/beautifulsoup_and_html5lib/: expected.toml  main.py  requirements.workaround.txt
tests/sample_projects/blog_post_example/: README  expected.toml  my_script.py
tests/sample_projects/conda_example/: environment.yml  expected.toml
tests/sample_projects/empty/: expected.toml
tests/sample_projects/file__requirements/: expected.toml
tests/sample_projects/file__requirements_undeclared/: expected.toml
tests/sample_projects/file__requirements_undeclared_unused/: expected.toml  project.py  requirements.txt
tests/sample_projects/file__requirements_unused/: expected.toml  requirements.txt
tests/sample_projects/hidden_files/: expected.toml
tests/sample_projects/hidden_files_win/: .hidden.code.py  .hidden.requirements.txt  expected.toml
tests/sample_projects/legacy_encoding/: expected.toml
tests/sample_projects/lfs_notebook/: expected.toml  foo.ipynb
tests/sample_projects/mixed_project/: expected.toml  pyproject.toml
tests/sample_projects/mixed_project_with_exclude_files/: .ignore  custom_ignore_subdir2  expected.toml
tests/sample_projects/no_issues/: expected.toml  python_file.py
tests/sample_projects/no_issues_win/: expected.toml  requirements.txt
tests/sample_projects/pixi_default_example/: expected.toml  pixi.toml
tests/sample_projects/pixi_pyproject_example/: expected.toml  pyproject.toml
tests/sample_projects/pixi_pyproject_example/.pixi/envs/default/conda-meta/: pixi  pixi_env_prefix  python-3.12.5-h2ad013b_0_cpython.json  requests-2.32.3-pyhd8ed1ab_0.json
tests/sample_projects/pyenv_galore/: expected.toml
tests/sample_projects/pyenv_galore_win/: expected.toml
tests/sample_projects/top_level_venv/: expected.toml
usage/: index.html
(+31 files in other folders)
