[project]
authors = [{name = "Johan Herland", email = "johan.herland@tweag.io"}]
dependencies = ["fawltydeps>=0.17.0,<0.18"]
description = "Add a short description here"
name = "pixi_pyproject_example"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_pyproject_example = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
requests = ">=2.32.3,<3"
